--- a/style.css
+++ b/style.css
@@ -1,133 +1,72 @@
-body{
-    font-family: 'Poppins', sans-serif;
-    clear: both;
-}
-h2{
-    font-size: 50px;
-}
-
-h3{
-    font-size: 40px;
-}
-p{
-    color: dimgray;
-    
-}
-.orange-highlight{
-    color: rgb(245, 51, 125)
-}
-
 .half-width{
+    
     width: 40%;
     float: left;
     margin-left: 5%;
     padding-left: 2%;
 }
+
+
+
 .half-width img{
     width: 100%;
 }
-.top-banner{
-    width: 100%;
-    background-image: url("img/header-bg.png");
-    background-repeat: no-repeat;
-    background-size: 90%;
+.orange{
+    color: orange;
+    padding-top: 10%;
 }
-section{
-    height: 500px;
-    clear: both;
+.highlight{
+    color: green;
 }
 .link-button{
     text-decoration: none;
-    background-image: linear-gradient(90deg, rgb(132, 0, 255), rgb(255, 65, 208));
+    background-image: linear-gradient(90deg, rgba(15, 133, 11, 0.815), rgba(22, 134, 12, 0.815));
     padding: 10px 20px;
-    border-radius: 5px;
+    border-radius: 25px;
     color: white;
     font-weight: 700;
-}
-.ancour-button{
-    text-decoration: none;
-    background-image: linear-gradient(90deg, rgb(122, 255, 255), rgba(200, 245, 0, 0.938));
-    padding: 10px 20px;
-    border-radius: 5px;
-    color: white;
-    font-weight: 700;
-}
-   
-.aspiration-area{
-    width: 100%;
-    background-image: url("img/biography-bg.png");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: 100%;
-}   
-.aspiration-area p {
-    text-align: left;
-}
-.single-experience{
-    box-shadow: 10px 10px 40px gray;
-    border-radius: 5px;
     
+}
+.card-deck{
+    padding-top: 100PX;
+    text-align: center;
+    padding-right: 20px ;
+    padding-left:20px;
+}
+
+.card{
+text-align: center;
+}
+
+.font{
+    padding-top: 60px;
+    text-align: center;
+}
+.card-footer{
     background-color: white;
-
+    border-top: none;
 }
-.experience-area{
-    width: 100%;
-    text-align: center;
-    background-image: url("img/latest-work-bg.png");
-    background-repeat: no-repeat;
-    background-size: 90%;
-    background-position: right;
-}
-.third-width img{
-    width: 25%;
-    float: left;
-    margin-left: 5%;
-    padding-left: 2%;
-}
-#be-center{
+.testimonial{
+    padding: 30px;
     text-align: center;
 }
-
-.fourth-section{
-    width: 100%;
-    background-image: url("img/footer-bg.png");
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: left;
-}    
-.fourth-width{
+.width{
+    padding-top: 40px;
     text-align: center;
-}
-.fifth-width{
-    text-align: center;
-
-}
-   
-
-.fifth-width p{
-    color: white;
-}
-.fifth-width h3{
-    text-align: center;
-}
-.masseage-button{
-    text-decoration: none;
-}
-.masseage-button p{
-    
-    background-image: linear-gradient(90deg, rgb(255, 122, 233), rgb(255, 71, 172));
-    padding: 30px 20px;
-    border-radius: 5px;
-    margin: 15px 300px;
-    color: white;
-    font-weight: 700;
+    padding-right: 30%;
+    width: 50;
 }
 
 
-
-#be-cool{
-    color: black;
 }
-.footer-sec{
-    text-align: center;
+.imnn{
+    width: 20px;
+   float: right;    
+    padding-right: 20px;
+    margin-bottom: 20%;
+height: 100px;
+}
+.footer{
+    padding-left: 50px;
+    padding-top: 50px;
 }
